* Added multiple filters to handle the elements of the post byline phrases
* Added `opus_display_exif_table_header_text` filter
* Added `opus_archive_image_title` filter
* Added `opus_archive_image_excerpt` filter
* Added `opus_archive_image_content` filter
* Added `opus_exif_*_label` filters for all details
* Added sanity conditional check to eliminate potential duplicate body classes
* Changed post thumbnail on pages to full size image and align to the center
* Changed comment fields into an unordered list
* Changed `meta-byline` container from `div` to `h3` (adjusted CSS as needed)
* Changed `meta-tags` container from `p` to `h3` (adjusted CSS as needed)
* Changed `opus_post_byline_details` filter to `opus_post_byline_phrase`
* Removed global `$opus_image_meta`; replaced with call to `exif_data` method

= CSS =
* Added styles for comment form fields
* Added more specific selector used with .post.format-link
* Added more BNS Plugin Integration (BPI) adjustments
* Address both class and id usage for the sidebar search form
* Adjusted widths of comment form elements
* Sorted out the adaptive layout for screens less than 480px wide

= JavaScript =
* Added more specific selector used with .post.format-link when adding .link-symbol class

= Stanzas =
* PullQuotes - Added 'pullquotes-readme.txt' file
* PullQuotes - Added left-side placement with new `to` parameter
* Taglines - Added 'taglines-readme.txt' file
* THA - Added 'tha-readme.txt' file

= Miscellaneous =
* Minor changes to text tense used in 'changelog.txt'
* Updated 'hooks-actions.txt'
* Updated 'hooks-filters.txt'
* Updated 'readme.txt' FAQ - What is the difference between how the "Featured Image" is used on a post and how it is used on a page?
* Updated 'readme.txt' FAQ - What are Stanzas?

/** ------------------------------------------------------------------------- */
== Version 1.1.1 ==
* Released March 2013

= Code =