@@ -14,6 +14,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Added `opus_archive_image_content` filter
 * Added `opus_exif_*_label` filters for all details
 * Added sanity conditional check to eliminate potential duplicate body classes
+* Changed `the_post_thumbnail` to use parameters which are set in the call to `OpusPrimusImage::featured_image`
 * Changed post thumbnail on pages to full size image and align to the center
 * Changed comment fields into an unordered list
 * Changed `meta-byline` container from `div` to `h3` (adjusted CSS as needed)
